# volumetric-viewer

./: LICENSE  README.md
volumetric-viewer/: pyproject.toml
volumetric-viewer/data/: lobster.nhdr  lobster.tfl  lobster_2.tfl  tooth.tfl
volumetric-viewer/src/shaders/: fragment.glsl  vertex.glsl
volumetric-viewer/src/volumetric_viewer/: arcball_camera.py  data_type_enum.py  event_system.py  gui_controls.py  main.py  nhdr_reader.py  raw_parser.py  raw_reader.py  renderer.py  shader_program.py  transfer_function.py  transfer_function_manager.py  volume.py  volume_normalizer.py
volumetric-viewer/tests/: test_nhdr_file_reader.py  test_raw_file_reader.py  test_volume_normalizer.py
